[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-pipeline-tp"
version = "0.1.0"
description = "User management"
requires-python = ">=3.11"
dependencies = [
    "pytest",
    "pytest-cov",
    "flake8",
]

[project.optional-dependencies]
dev = [
    "build",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
